diesel_compile_tests/tests/compile-fail/table_invalid_syntax_1.rs
#[macro_use] extern crate diesel;

table! {
    12
    //~^ ERROR expected ident
}

fn main() {}
